[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/PinguDadScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Referencia.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/PinguMomScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/music/main_theme.mp3" type="AudioStream" id=4]
[ext_resource path="res://scripts/Game.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/barra.png" type="Texture" id=6]

[node name="Game" type="Node"]
script = ExtResource( 5 )

[node name="PinguDadScene" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -329 )

[node name="PinguMomScene" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 269 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -24.042

[node name="Barra" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.411765 )
position = Vector2( 511.75, 291.75 )
scale = Vector2( 2.47831, 0.794118 )
texture = ExtResource( 6 )

[node name="PuntajeFinal" type="Label" parent="."]
visible = false
anchor_left = 0.107
anchor_top = 0.083
anchor_right = 0.107
anchor_bottom = 0.083
margin_left = 64.432
margin_top = 163.2
margin_right = 148.432
margin_bottom = 177.2
rect_scale = Vector2( 7.261, 7.938 )
text = "Puntaje 2313"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Puntaje" type="Label" parent="."]
margin_left = 157.0
margin_top = 280.0
margin_right = 205.0
margin_bottom = 294.0
text = "puntaje"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vida" type="Label" parent="."]
margin_left = 844.0
margin_top = 280.0
margin_right = 902.0
margin_bottom = 294.0
text = "vida: 100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ppp" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="finished" from="Music" to="." method="_on_Music_finished"]
